--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Projeto Redes Sociais</title>
+    <style>
+        h1{
+            width: 400px;
+        }
+    </style>
 </head>
 <body>
     <h1>Olá, Mundo !</h1>
