--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+    <meta http-equiv="refresh" content="1.0">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="estilos/style.css">
     <title>Projeto Redes Sociais</title>
-    <style>
-        h1{
-            width: 400px;
-        }
-    </style>
 </head>
 <body>
-    <h1>Olá, Mundo !</h1>
+<main>
+    <section id="telefone">
+        
+    </section>
+    <section id="redes-sociais">
+
+    </section>
+</main>
 </body>
 </html>
